Align sidebar extras with submission module, semi-fix submit focus/blur animations

--- a/public_html/global.css
+++ b/public_html/global.css
@@ -479,6 +479,10 @@ span.padded {
 	margin-bottom: 20px;
 }
 
+.boxes .box.sidebar-extra {
+	margin-bottom: 3px;
+}
+
 #post-collapse .buttons {
   font-size: inherit;
 }
