--- a/public_html/settings/theme.css
+++ b/public_html/settings/theme.css
@@ -17,6 +17,8 @@
   width: 200px;
   text-align: center;
   left: 50%;
+  top: 50%;
   margin-left: -146px;
+  margin-top: -85px;
   padding: 30px 45px 40px 45px;
 }
